--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,9 +4,10 @@ services:
   app:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_URLS=http://+:80
+      # - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - 65258:443
+      # - 65258:443
       - 65257:80
     volumes:
       - ~/.aspnet/https:/root/.aspnet/https:ro
